Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1681

DNS resolution failure of master hostname causes tserver crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.0.0
    • 1.0.1, 1.1.0
    • tserver
    • None

    Description

      Smoking gun stacktrace:

      *** Aborted at 1475704619 (unix time) try "date -d @1475704619" if you are using GNU date ***
      PC: @           0xa0d0dd kudu::rpc::Proxy::AsyncRequest()
      *** SIGSEGV (@0x40) received by PID 139726 (TID 0x7fd280c1a700) from PID 64; stack trace: ***
          @       0x3e66e0f710 (unknown)
          @           0xa0d0dd kudu::rpc::Proxy::AsyncRequest()
          @           0xa0d62b kudu::rpc::Proxy::SyncRequest()
          @           0x867f1a kudu::master::MasterServiceProxy::Ping()
          @           0x7b74d5 kudu::tserver::Heartbeater::Thread::ConnectToMaster()
          @           0x7b82af kudu::tserver::Heartbeater::Thread::DoHeartbeat()
          @           0x7b8d9d kudu::tserver::Heartbeater::Thread::RunThread()
          @          0x19117aa kudu::Thread::SuperviseThread()
          @       0x3e66e079d1 (unknown)
          @       0x3e66ae88fd (unknown)
          @                0x0 (unknown)
      

      Attachments

        Activity

          People

            danburkert Dan Burkert
            danburkert Dan Burkert
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: