KUDU-1681: DNS resolution failure of master hostname causes tserver crash

Also changes the fail_dns_resolution flag to make DNS resolution return
an error Status instead of an empty resolved list. From the manpage of
getaddrinfo:

    After a successful call to getaddrinfo(), *res is a pointer to a
    linked list of one or more addrinfo structures.

Change-Id: Ib79973a38bebbe84df419e274c08c8cc0c5d31cd
Reviewed-on: http://gerrit.cloudera.org:8080/4640
Reviewed-by: Todd Lipcon <todd@apache.org>
Tested-by: Kudu Jenkins